feat: 카테고리명 및 리워드명 기반 검색 대상 확장 및 테스트 추가